# WebApp-Wrapper

./: .gitignore  INSTRUKTIONER.txt  README.md  TODO.md  install-from-dmg.command  install-mac.sh  package-lock.json  package.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
