[package]
name = "mini-web-sdk"
version = "0.1.0"
description = "Minimal Tauri v2 browser with locked download folder"
authors = []
edition = "2021"

[lib]
name = "mini_web_sdk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mini-web-sdk"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
open = "5"
url = "2"
